feat(TestDomain): add Domain template class
Domain 템플릿 클래스 추가.

BREAKING CHANGES: 새 dependencies 'org.springframework.boot:spring-boot-starter-data-jpa' 추가.

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	//SpringBoot
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	//Lombok - for repeatable jobs
 	implementation 'org.projectlombok:lombok:1.18.22'
