feat(applicationProperties): make application properties private
application.properties를 gitignore에 추가. 대신, application.properties.example을 추가해서 예시 제공. 데이터베이스 username/비밀번호 보호 차원

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,6 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij
+
+# Spring properties ignore - only examples are allowed to upload
+application.properties
