--- a/build.gradle
+++ b/build.gradle
@@ -13,26 +13,35 @@ repositories {
 	mavenCentral()
 }
 
+configurations {
+	compile.exclude module: 'spring-boot-starter-logging'
+}
+
+
 dependencies {
 	//SpringBoot
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter' exclude module: 'spring-boot-starter-logging'
+	implementation 'org.springframework.boot:spring-boot-starter-web' exclude module: 'spring-boot-starter-logging'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' exclude module: 'spring-boot-starter-logging'
 
 	//Lombok - for repeatable jobs
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	implementation 'org.projectlombok:lombok:1.18.22'
 
-	//Logback
-	implementation 'ch.qos.logback:logback-core'
-	implementation 'ch.qos.logback:logback-classic:1.2.10'
-	implementation 'org.slf4j:slf4j-parent:1.7.35'
+	//Log4j2
+	implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.6.3'
+	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
 
 	//Test - Junit
 	testImplementation(platform('org.junit:junit-bom:5.8.2'))
 	testImplementation('org.junit.jupiter:junit-jupiter')
 	testImplementation('junit:junit:4.13.2')
 	testImplementation 'org.springframework:spring-test:5.3.15'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3' exclude module: 'spring-boot-starter-logging'
+	testImplementation 'org.assertj:assertj-core:3.22.0'
+
+	//Database connector - MariaDB
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.3'
 }
 
 tasks.named('test') {
