build(config): add mapper dependency
1:n 데이터베이스 구조를 ORM 구조로 변환하기 위한 라이브러리 추가

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 
 	//Database connector - MariaDB
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.3'
+
+	//Database JDBC ORM Mapper
+	implementation 'org.simpleflatmapper:sfm-jdbc-jre9:8.2.3'
 }
 
 tasks.named('test') {
