--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'idea'
+	id 'application'
 }
 
 group = 'deu.demo'
@@ -17,6 +18,13 @@ configurations {
 	compile.exclude module: 'spring-boot-starter-logging'
 }
 
+sourceSets {
+	test{
+		resources {
+			srcDirs "${project.projectDir}/src/test/resources", "${project.projectDir}/src/main/resources"
+		}
+	}
+}
 
 dependencies {
 	//SpringBoot
@@ -45,6 +53,15 @@ dependencies {
 
 	//Database JDBC ORM Mapper
 	implementation 'org.simpleflatmapper:sfm-jdbc-jre9:8.2.3'
+
+	//JWT
+	implementation 'com.auth0:java-jwt:3.18.3'
+}
+
+tasks {
+	processTestResources {
+		duplicatesStrategy = org.gradle.api.file.DuplicatesStrategy.INCLUDE
+	}
 }
 
 tasks.named('test') {
