--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter' exclude module: 'spring-boot-starter-logging'
 	implementation 'org.springframework.boot:spring-boot-starter-web' exclude module: 'spring-boot-starter-logging'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' exclude module: 'spring-boot-starter-logging'
+	implementation 'org.springframework.boot:spring-boot-starter-security' exclude module: 'spring-boot-starter-logging'
 
 	//Lombok - for repeatable jobs
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	implementation 'org.projectlombok:lombok:1.18.22'
+	compile "org.projectlombok:lombok:1.18.22"
 
 	//Log4j2
 	implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.6.3'
