feat(Login): add Login Service on UserAuthenticationService with test
서버에 로그인하기 위해 사용되는 login method 구현 및 테스트 코드 추가.

--- a/.gitignore
+++ b/.gitignore
@@ -155,5 +155,5 @@ fabric.properties
 
 # Spring properties ignore - only examples are allowed to upload
 application.properties
-keylist.properties
+src/main/resources/keylist.properties
 logs
