--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web' exclude module: 'spring-boot-starter-logging'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' exclude module: 'spring-boot-starter-logging'
 	implementation 'org.springframework.boot:spring-boot-starter-security' exclude module: 'spring-boot-starter-logging'
+	testImplementation 'org.springframework.security:spring-security-test' exclude module: 'spring-boot-starter-logging'
 
 	//Lombok - for repeatable jobs
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
